examples/type_system/failing/73_hm_index_non_int_compile_mismatch.flx
fn take(xs: List<Int>) -> Option<Int> {
    xs["0"]
}

fn main() -> Unit with IO {
    print(to_string(take([1, 2, 3])))
}
